bin/tests/snapshots/main__bool_comparison_fix.snap
---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/bool_comparison.nix
+++ tests/data/bool_comparison.nix [fixed]
@@ -1,27 +1,27 @@
 [
   # trivial
-  (a == true)
-  (b == true)
-  (true == c)
-  (true == d)
+  a
+  b
+  c
+  d
 
   # not equals
-  (e != true)
-  (f != false)
-  (true != g)
-  (false != h)
+  (!e)
+  f
+  (!g)
+  h
 
   # non-matches
   (i == j)
   (k != l)
 
   # both sides bool
-  (false == false)
-  (false == true)
-  (true == false)
-  (true == true)
+  (!false)
+  (!true)
+  false
+  true
 
   # has attr
-  (false == m ? n)
-  (true == o ? p)
+  (!m ? n)
+  (o ? p)
 ]
