bin/tests/snapshots/main__collapsible_let_in_fix.snap
---
source: bin/tests/main.rs
expression: "& stdout"
---
--- tests/data/collapsible_let_in.nix
+++ tests/data/collapsible_let_in.nix [fixed]
@@ -1,9 +1,8 @@
 let
   a = 2;
   b = 3;
-in
-  let
+
     c = 5;
     d = 6;
   in
   a + b + c + d
