bin/tests/snapshots/main__collapsible_let_in_lint.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
[W06] Warning: These let-in expressions are collapsible
   ╭─[tests/data/collapsible_let_in.nix:1:1]
   │
 1 │ ╭───▶ let
 5 │ │ ╭─▶   let
 9 │ │ ├─▶   a + b + c + d
   · │ │                 │   
   · │ ╰───────────────────── This let in expression is nested
   · │                   │   
   · ╰───────────────────┴─── This let in expression contains a nested let in expression
───╯
