bin/tests/snapshots/main__deprecated_is_null.snap
---
source: bin/tests/main.rs
expression: "&out"

---
[W13] Warning: Found usage of deprecated builtin isNull
   ╭─[data/deprecated_is_null.nix:4:4]
   │
 4 │ if isNull e
   ·    ────┬───  
   ·        ╰───── isNull is deprecated, check equality with null instead
───╯

