bin/tests/snapshots/main__empty_inherit.snap
---
source: bin/tests/main.rs
expression: "&out"

---
[W14] Warning: Found empty inherit statement
   ╭─[data/empty_inherit.nix:2:3]
   │
 2 │   inherit;
   ·   ────┬───  
   ·       ╰───── Remove this empty inherit statement
───╯

