bin/tests/snapshots/main__empty_inherit_fix.snap
---
source: bin/tests/main.rs
expression: "&stdout"
---
--- tests/data/empty_inherit.nix
+++ tests/data/empty_inherit.nix [fixed]
@@ -1,3 +1,2 @@
 {
-  inherit;
 }
